# Timetables

./: CMakeLists.txt  README.md
data/: base.tex  path.txt
scripts/: build.ps1
src/tmt/: data.cpp  data.h  timetables.cpp  util.cpp  util.h
